--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1335,14 +1335,19 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="pre_meet_submission">Pre-meet submission</string>
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
-    <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
   <string name="all_search">Search</string>
   <string name="all_send_invite">Send Invite</string>
-  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_phone_contact">फोनबुक संपर्क</string>
   <string name="all_invite">आमंत्रित करें</string>
   <string name="detail_scroll_survey">Scroll to see survey link</string>
   <string name="editor_help_mail">Mail Us</string>
   <string name="editor_help_header_text">अपनी समस्या हमें मेल करें</string>
   <string name="get_help_bottom_text">हमारी सपोर्ट टीम आपकी सहायता करेगी।</string>
   <string name="detail_take_survey">Take survey</string>
+  <string name="all_follow">Follow</string>
+  <string name="invite_friends_follow_you">दोस्तों को आपको फॉलो करने के लिए आमंत्रित करें</string>
+  <string name="invite_friends_facebook">फेसबुक दोस्त</string>
+  <string name="invite_friends_link">आमंत्रण लिंक शेयर करें</string>
+  <string name="invite_friends_show_creation">उन्हें दिखाएं कि आपने क्या बनाया है!</string>
 </resources>
