--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1354,14 +1354,19 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="pre_meet_submission">Pre-meet submission</string>
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
-    <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
   <string name="all_search">Search</string>
   <string name="all_send_invite">Send Invite</string>
-  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_phone_contact">ಫೋನ್‌ ಬುಕ್‌ ಸಂಪರ್ಕಗಳು</string>
   <string name="all_invite">ಆಮಂತ್ರಿಸಿ</string>
   <string name="detail_scroll_survey">Scroll to see survey link</string>
   <string name="editor_help_mail">Mail Us</string>
   <string name="editor_help_header_text">ಸಹಾಯ ಬೇಕೇ?</string>
   <string name="get_help_bottom_text">ಸಮಸ್ಯೆಗಳಿದ್ದರೆ ಇ ಮೇಲ್‌ ಮಾಡಿ. ಆ ಮೂಲಕ ನಿಮ್ಮ ಸಮಸ್ಯೆಗಳಿಗೆ ಸ್ಪಂದಿಸುತ್ತೇವೆ</string>
   <string name="detail_take_survey">Take survey</string>
+  <string name="all_follow">Follow</string>
+  <string name="invite_friends_follow_you">ನಿಮ್ಮನ್ನು ಫಾಲೋ ಮಾಡಲು ನಿಮ್ಮ ಗೆಳೆಯರನ್ನು ಆಹ್ವಾನಿಸಿ</string>
+  <string name="invite_friends_facebook">ಫೇಸ್ಬುಕ್‌ ಗೆಳೆಯರು</string>
+  <string name="invite_friends_link">ಆಹ್ವಾನಿಸಲು ಇರುವ ಲಿಂಕ್‌ ಹಂಚಿಕೊಳ್ಳಿ</string>
+  <string name="invite_friends_show_creation">ನಿಮ್ಮ ಬರವಣಿಗೆಯನ್ನು ಅವರಿಗೂ ತೋರಿಸಿ</string>
 </resources>
