--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -607,7 +607,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="complete_blogger_profile.save">SAVE</string>
   <string name="complete_blogger_profile.incorrect_date">Please choose correct date for date of birth.</string>
 
-  <string name="add_video_details.title_hint">ENTER A TITLE FOR THE VIDEO</string>
+  <string name="add_video_details.title_hint">ਵੀਡੀਓ ਟਾਈਟਲ (ਅਧਿਕਤਮ 150 ਅੱਖਰ)</string>
   <string name="add_video_details.mute_label">ਆਵਾਜ਼ ਬੰਦ ਕਰੋ</string>
   <string name="add_video_details.add_music">ADD MUSIC</string>
   <string name="add_video_details.remove">ਹਟਾਓ</string>
@@ -1375,14 +1375,19 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="pre_meet_submission">Pre-meet submission</string>
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
-    <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
   <string name="all_search">Search</string>
   <string name="all_send_invite">Send Invite</string>
-  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_phone_contact">ਫੋਨਬੁੱਕ ਸੰਪਰਕ</string>
   <string name="all_invite">Invite</string>
   <string name="detail_scroll_survey">Scroll to see survey link</string>
   <string name="editor_help_mail">Mail Us</string>
   <string name="editor_help_header_text">Need Help?</string>
   <string name="get_help_bottom_text">Please mail us your issue so we can help you out.</string>
   <string name="detail_take_survey">Take survey</string>
+  <string name="all_follow">Follow</string>
+  <string name="invite_friends_follow_you">ਦੋਸਤਾਂ ਨੂੰ ਤੁਹਾਨੂੰ ਫੋਲੋ ਕਰਨ ਲਈ ਸੱਦਾ ਦਿਓ</string>
+  <string name="invite_friends_facebook">ਫੇਸਬੁੱਕ ਦੋਸਤ</string>
+  <string name="invite_friends_link">ਸੱਦਾ ਲਿੰਕ ਸ਼ੇਅਰ ਕਰੋ</string>
+  <string name="invite_friends_show_creation">ਉਹਨਾਂ ਨੂੰ ਦਿਖਾਓ ਕਿ ਤੁਸੀਂ ਕੀ ਬਣਾਇਆ ਹੈ!</string>
 </resources>
