translations + bug fixes

--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1441,4 +1441,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">ફેસબુક ફ્રેન્ડસ/ મિત્રો</string>
   <string name="invite_friends_link">આમંત્રણ ની લિંક શેર કરો</string>
   <string name="invite_friends_show_creation">તેમને તમારી રચનાત્મકતા દેખાડો.</string>
+  <string name="video_upload_thankyou_msg">આભાર! વિડીયો અપલોડ થયે અમે તમને જાણ કરીશું.</string>
 </resources>
