--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1373,4 +1373,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">ഫേസ്ബുക്ക് സുഹൃത്തുക്കൾ</string>
   <string name="invite_friends_link">ക്ഷണിക്കുന്നതിനുള്ള ലിങ്ക് പങ്കിടുക</string>
   <string name="invite_friends_show_creation">നിങ്ങൾ സൃഷ്ടിച്ചതെന്താണെന്ന് അവരെ കാണിക്കുക!</string>
+  <string name="video_upload_thankyou_msg">നന്ദി! നിങ്ങളുടെ വീഡിയോ അപ്‌ലോഡ് ആയാൽ ഞങ്ങൾ അറിയിക്കും.</string>
 </resources>
