--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1325,4 +1325,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">முகநூல் நண்பர்கள்</string>
   <string name="invite_friends_link">அழைப்பு உரலியை பகிர்</string>
   <string name="invite_friends_show_creation">உங்களின் படைப்புக்களை அவர்களுக்கு  காண்பியுங்கள்</string>
+  <string name="video_upload_thankyou_msg">நன்றி! உங்கள் வீடியோ பதிவேற்றப்பட்டதும் நாங்கள் உங்களுக்கு தெரியப்படுத்துகிறோம்.</string>
 </resources>
