--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1334,4 +1334,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">ফেসবুকের বন্ধুরা</string>
   <string name="invite_friends_link">আমন্ত্রণের লিঙ্ক শেয়ার করুন</string>
   <string name="invite_friends_show_creation">ওদের দেখান যে আপনি কি বানিয়েছেন!</string>
+  <string name="video_upload_thankyou_msg">ধন্যবাদ! আপনার ভিডিওটি আপলোড হলেই আমরা আপনাকে নোটিফিকেশন পাঠাবো|</string>
 </resources>
