--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1350,4 +1350,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">फेसबुक दोस्त</string>
   <string name="invite_friends_link">आमंत्रण लिंक शेयर करें</string>
   <string name="invite_friends_show_creation">उन्हें दिखाएं कि आपने क्या बनाया है!</string>
+  <string name="video_upload_thankyou_msg">धन्यवाद! वीडियो अपलोड होने के बाद हम आपको सूचित करेंगे।</string>
 </resources>
