--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1327,4 +1327,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">फेसबुकचे मित्र</string>
   <string name="invite_friends_link">आमंत्रित करण्यासाठी लिंक शेअर करा</string>
   <string name="invite_friends_show_creation">तुमची कलाकृती/ लेख त्यांना दाखवा! </string>
+  <string name="video_upload_thankyou_msg">धन्यवाद!आपला व्हिडिओ अपलोड झाल्यावर तुम्हाला नोटिफिकेशन पाठवू</string>
 </resources>
