--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1390,4 +1390,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">ਫੇਸਬੁੱਕ ਦੋਸਤ</string>
   <string name="invite_friends_link">ਸੱਦਾ ਲਿੰਕ ਸ਼ੇਅਰ ਕਰੋ</string>
   <string name="invite_friends_show_creation">ਉਹਨਾਂ ਨੂੰ ਦਿਖਾਓ ਕਿ ਤੁਸੀਂ ਕੀ ਬਣਾਇਆ ਹੈ!</string>
+  <string name="video_upload_thankyou_msg">ਧੰਨਵਾਦ ! ਵੀਡੀਓ ਅਪਲੋਡ ਹੋਣ ਤੋਂ ਬਾਅਦ ਅਸੀਂ ਤੁਹਾਨੂੰ ਸੂਚਿਤ ਕਰਾਂਗੇ.।</string>
 </resources>
