--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1329,4 +1329,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">Facebook Friends</string>
   <string name="invite_friends_link">Share Invite Link</string>
   <string name="invite_friends_show_creation">మీరు క్రియేట్ చేసిన వాటిని వారికి చూపించండి!</string>
+  <string name="video_upload_thankyou_msg">ధన్యవాదాలు! మీ వీడియో అప్‌లోడ్ అయిన తర్వాత మేము మీకు తెలియజేస్తాము.</string>
 </resources>
