--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1500,5 +1500,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_facebook">Facebook Friends</string>
   <string name="invite_friends_link">Share Invite Link</string>
   <string name="invite_friends_show_creation">Show them what you’ve created!</string>
+  <string name="video_upload_thankyou_msg">Thank you! We will notify you once your video is uploaded.</string>
 </resources>
 
