--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1326,4 +1326,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_link">அழைப்பு உரலியை பகிர்</string>
   <string name="invite_friends_show_creation">உங்களின் படைப்புக்களை அவர்களுக்கு  காண்பியுங்கள்</string>
   <string name="video_upload_thankyou_msg">நன்றி! உங்கள் வீடியோ பதிவேற்றப்பட்டதும் நாங்கள் உங்களுக்கு தெரியப்படுத்துகிறோம்.</string>
+  <string name="video_upload_success">வெற்றிகரமாக பதிவேற்றப்பட்டது</string>
+  <string name="all_open">திற</string>
 </resources>
