--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1372,4 +1372,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="video_upload_thankyou_msg">ಧನ್ಯವಾದಗಳು. ನಿಮ್ಮ ವಿಡಿಯೋ ಅಪ್ಲೋಡ್ ಆದ ಕೂಡಲೇ ತಿಳಿಸುತ್ತೇವೆ.</string>
   <string name="video_upload_success">ಯಶಸ್ವಿಯಾಗಿ ಅಪ್ಲೋಡ್ ಆಗಿದೆ</string>
   <string name="all_open">ತೆರೆಯಿರಿ</string>
+  <string name="watch_other_videos_text_in_mom_vlog_following_feed">Watch other awesome videos while we create your personalized feed</string>
+  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">Follow creators to create you own following feed</string>
+  <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
 </resources>
