--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1393,4 +1393,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="video_upload_thankyou_msg">ਧੰਨਵਾਦ ! ਵੀਡੀਓ ਅਪਲੋਡ ਹੋਣ ਤੋਂ ਬਾਅਦ ਅਸੀਂ ਤੁਹਾਨੂੰ ਸੂਚਿਤ ਕਰਾਂਗੇ.।</string>
   <string name="video_upload_success">ਤੁਹਾਡਾ ਵੀਡੀਓ ਸਫਲਤਾਪੂਰਵਕ ਅਪਲੋਡ ਹੋ ਗਿਆ ਹੈ।</string>
   <string name="all_open">ਵੀਡੀਓ ਦੇਖੋ</string>
+  <string name="watch_other_videos_text_in_mom_vlog_following_feed">Watch other awesome videos while we create your personalized feed</string>
+  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">Follow creators to create you own following feed</string>
+  <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
 </resources>
