category siblings api integration + live challenge separate section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1509,5 +1509,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="watch_other_videos_text_in_mom_vlog_following_feed">Watch other awesome videos while we create your personalized feed</string>
   <string name="follow_creators_feed_header_text_in_mom_vlog_feed">Follow creators to create you own following feed</string>
   <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
+  <string name="all_live_challenges">Live Challenges</string>
 </resources>
 
