--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -869,7 +869,7 @@
   <string name="upload_larger_video">அடடா! உங்கள் வீடியோ குறைந்தது 5 வினாடிகள் இருக்க வேண்டும்.</string>
   <string name="minutes_label">நிமிடங்கள்</string>
   <string name="women_only">Oops! This section is for women only. You can, however, continue to read our other content</string>
-  <string name="check_out_momvlog">Momspresso\n\nCheck out this interesting blog post\n</string>
+  <string name="check_out_momvlog">Momspresso\n\nCheck out this interesting video\n</string>
   <string name="take_picture_from_camera">Take picture from camera</string>
   <string name="select_an_image">Select an image</string>
   <string name="related_videos">RELATED VIDEOS</string>
