--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -812,7 +812,7 @@
   <string name="upload_larger_video">అయ్యో ! మీ వీడియో కనీయం 5 క్షణాలు ఉండాలి </string>
   <string name="minutes_label">నిమిషాల</string>
   <string name="women_only">Oops! This section is for women only. You can, however, continue to read our other content</string>
-  <string name="check_out_momvlog">మామ్స్‌ప్రెస్సో\n\nCheck out this interesting blog post\n</string>
+  <string name="check_out_momvlog">మామ్స్‌ప్రెస్సో\n\nCheck out this interesting video\n</string>
   <string name="take_picture_from_camera">Take picture from camera</string>
   <string name="select_an_image">Select an image</string>
   <string name="related_videos">RELATED VIDEOS</string>
