--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -875,7 +875,7 @@
   <string name="upload_larger_video">ओह ! आपका वीडियो कम से कम 5 सेकेंड लंबा होना चाहिए।</string>
   <string name="minutes_label">मिनट</string>
   <string name="women_only">ओह हो\! यह सेक्शन केवल महिलाओं के लिए है। हालांकि, आप हमारा कांटेंट पढ़ना जारी रख सकते हैं।</string>
-  <string name="check_out_momvlog">Momspresso\n\nCheck out this interesting blog post\n</string>
+  <string name="check_out_momvlog">Momspresso\n\nCheck out this interesting video\n</string>
   <string name="take_picture_from_camera">Take picture from camera</string>
   <string name="select_an_image">Select an image</string>
   <string name="related_videos">RELATED VIDEOS</string>
