--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1375,7 +1375,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="video_upload_success">ಯಶಸ್ವಿಯಾಗಿ ಅಪ್ಲೋಡ್ ಆಗಿದೆ</string>
   <string name="all_open">ತೆರೆಯಿರಿ</string>
   <string name="watch_other_videos_text_in_mom_vlog_following_feed">Watch other awesome videos while we create your personalized feed</string>
-  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">Follow creators to create you own following feed</string>
+  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">You aren\'t following anyone. Follow our top vloggers to see the best videos on Momspresso! </string>
   <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
   <string name="all_live_challenges">Live Challenges</string>
 </resources>
