--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1399,4 +1399,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="follow_creators_feed_header_text_in_mom_vlog_feed">You aren\'t following anyone. Follow our top vloggers to see the best videos on Momspresso! </string>
   <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
   <string name="all_live_challenges">Live Challenges</string>
+  <string name="view_comments">View Comments</string>
 </resources>
